Fix z-index

--- a/src/components/Timeline/Header/styles.module.css
+++ b/src/components/Timeline/Header/styles.module.css
@@ -77,6 +77,10 @@
   padding: 0;
 }
 
+:global([data-reach-menu-popover]) {
+  z-index: 200;
+}
+
 .menu[data-reach-menu-list],
 .menu[data-reach-menu-items] {
   animation: slide-down 0.2s ease;
